--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 </nav>
 <!-- located at top of site -->
 
+<body>
 <!-- body content -->
 <h1> Disco This Way </h1>
 
 <img src="images/discoball.jpeg" width="600" height="360">
 
-<!-- underneat image will be the first paragaph that will be on the home page -->
+<!-- underneath image will be the first paragaph that will be on the home page -->
 
-<p>Welcome to the disco den, where we will learn everything there is to know about disco! Hopefully this site will prepare you in a time of need to where you need to know your boogie history. This site will show you the most popular music in the disco era composed by artists such as the Bees Gees, Donna Summer, and Kool & the gang. Popular styles that were worn in this era were platforms, bell bottoms, pointy collars and flowy dresses. Although it is one of the most shortest lived rage in the music industry, disco has changed our world.</p>
+<p>Welcome to the disco den, where we will learn everything there is to know about disco! Hopefully this site will prepare you in a time of need to where you need to know your boogie history. This site will show you the most popular music in the disco era composed by artists such as the O’Jays, The Isley Brothers, Heatwave, and Earth, Wind, & Fire. We’ll also be showing iconic fashion statements created in the 70’s that seem to be making a comeback once again. Although it is one of the most shortest lived rage in the music industry, disco has changed our world.</p>
 
 <!-- This will be the next section and will give a brief summary of the other navigations  -->
 
@@ -32,14 +33,20 @@
 
 <img src="images/thebrothersjohnson.jpeg" width="600" height="360">
 
-<p>Disco is a genre of music that became popular in the United States in the 1970s. Disco was known for its upbeat catchy tempo played by electric pianos, synthesizers (a type of piano) and guitars. The vocals are also known to be repetitive  </p>
+<p>Disco is a genre of music that became popular in the United States in the 1970s. Disco was known for its upbeat catchy tempo played by electric pianos, synthesizers (a type of piano) and guitars. The vocals are also known to be repetitive. Artists that have made an influence in the Disco world were singers such as Donna Summer, Bees Gees, Gloria Gaynor, and Kool & the Gang. Although Disco did not last long, artists were able to leave a legacy.</p>
+
+<!-- History Section -->
 
 <h2> History </h2>
 
 <img src="images/girlgroup.jpeg" width="600" height="360">
 
-<p>Disco is known to come from the 1970s, but did you know that it wasn’t popular until the late 70s and early 80s? Disco was slowing introduced in the early 1970s but didn’t take a boom until the movie “Saturday Night Fever” with John Travolta, was premiered. After the premiere, disco was at its peak in popularity. </p>
-<body>
+<p>Disco is known to come from the 1970s, but did you know that it wasn’t popular until the late 70s and early 80s? Disco was slowly introduced in the early 70s but didn’t take a boom until the movie “Saturday Night Fever” with John Travolta premiered. After the premiere, disco was at its peak in popularity. </p>
+
+<p>Unfortunately, Disco did not last long after the Disco Demolition Night occurred. The event took place in Chicago, Illinois after a radio station announced a promotion at a White Sox baseball game. The promotion was if fans brought in a disco vinyl they would only pay ninety eight cents for the admission. In between games, the disco vinyl’s that were collected were placed in crates in the middle of the baseball field, until suddenly an explosion occurs destroying all the vinyl’s causing fans to storm to the field. Label records were afraid to label themselves as Disco due to fear of losing supporters. Though the popularity of Disco declined, other genres of music were created that were inspired by disco such as House Music, DJ Culture and early Hip-Hop.</p>
+
+<p>Not only did Disco change music, but it also changed fashion. The disco style was usually go big or go home. Women would wear flowy dresses, tight-knitted jumpsuits, crop tops, and bell bottoms. The men were usually seen wearing three piece suits, pointy collars popped out, platform shoes and medallions. </p>
+
     
 </body>
 </html>
